--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,8 @@
 apply plugin: 'com.android.application'
 
+
+apply plugin: 'realm-android'
+
 android {
     compileSdkVersion 24
     buildToolsVersion "23.0.3"
