--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.android.support:design:24.0.0'
 
+    compile 'com.github.d-max:spots-dialog:0.7@aar'
+
 
     //    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
     //    compile 'com.squareup.retrofit2:retrofit:2.1.0'
